Fix long client names overflowing

--- a/maubot/management/frontend/src/style/pages/sidebar.sass
+++ b/maubot/management/frontend/src/style/pages/sidebar.sass
@@ -52,6 +52,8 @@
             border-radius: .25rem
             height: 2rem
             box-sizing: border-box
+            white-space: nowrap
+            overflow-x: hidden
 
             &:not(:hover) > svg.chevron
                 display: none
